<?xml version="1.0"?>
<package format="2">
	<name>cmd_vel_to_pwm</name>
	<version>0.1.0</version>
	<description>trnaslate robot velocities to actuators</description>
	<maintainer email="ahmad.m.rashed@outlook.com">ahmad_rashed</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<!--<depend>eigen</depend> -->
	<!--<depend>boost</depend> -->
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
<build_depend>JetsonGPIO</build_depend>
</package>
